fix: contact alignment

--- a/src/styles/includes/_locations.scss
+++ b/src/styles/includes/_locations.scss
@@ -140,7 +140,7 @@
 	}
 
 	&__content-studio-wrapper {
-		display: flex;
+		display: grid;
 		flex-wrap: wrap;
 		grid-column: 1/7;
 		grid-row: 2/3;
